chore: move endpoint to get user info from /user/me to /auth/me
